1. 검색 버튼 클릭 외 검색 바에서 검색어 입력 후 엔터키 클릭 시 검색되도록 추가 + 검색어가 없는데 엔터 키 누르면 검색어 입력해달라고 alert 표시. 2. 문자열 너무 길면 짤리는 것(overview : 450자 제한으로 수정). 3. 장르 클릭 시 클릭된 장르 색 저장하도록. 4. 우측 최상단에 아바타 이미지 나오도록(태그 잘못 작성(img인데 image로 작성)). 5. 검색 페이지 최초 한 번 검색 후 작동 안 됨 6. 검색 버튼 우측 상하 테두리 둥글게 수정

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -27,6 +27,11 @@
     transition: background-color, 0.5s;
 }
 
+.genre.active {
+    background-color: white;
+    color: black;
+}
+
 .genre:hover {
     background-color: gray;
 }
